# AMOSUM

./: .gitignore  .gitmodules  2  Makefile  MinOnFly  README.md  __main__.py  abstract_maximum_subset.py  amomaximize.asp  amosum.cpp  amosum.h  amosum.py  amosum_initializer.cpp  amosum_initializer.h  amosum_initializer.py  ask_g.py  ask_w.py  check  check_correctness_with_kn_ge_amo.sh  check_correctness_with_kn_ge_eo.sh  check_correctness_with_kn_le_eo.sh  common.py  configurations_pss  debug.py  dioaaa  encoding-amosum-amo.asp  encoding_plain.asp  excecution_c_min  excecution_min  failed_instance.txt  functional_propagator.py  ge_amo.py  ge_eo.py  graph_coloring_max.asp  help  install.sh  instance.asp  le_amo.py  le_eo.py  minimize_reason_old.py  (+38 more)
amoclingo/: __main__.py
amosum/: amosum.cpp  amosum.h  amosum.py  amosum_initializer.cpp  amosum_initializer.h  amosum_initializer.py  logger.cpp  logger.h  preprocess.py  settings.h  utility.cpp  utility.h  utility.py  utility.tpp
amowasp/: run.py
auxiliaries/: abstract_maximum_subset.py
clingo/: propagator_clingo.py  run.py  runner_clingo.py
clingo_dir/: err  ge_amo.py  out  propagator_clingo.py  run.py
notes/: reason  todo
prop_clingo/: propagator_clingo.py  run.py  runner_clingo.py
prop_wasp/: ge_amk.py  ge_amo.py  ge_eo.py  le_amk_not_implemented.py  le_eo.py  propagator_wasp.py  run.py  runner_wasp.py  temp
scratch/: scratch
tests/: D.2025-05-31.tab  D.2025-06-03.tmp.tab  IJCAI.2025-05-29.tab  Runner.py  RunnerClingo.py  RunnerWasp.py  output_statistics_reason_minimal  output_statistics_reason_minimum  (+10 more)
(+2514 files in other folders)
