[project]
name = "amoclingo"
version = "0.0.1"
authors = [
  { name="Salvatore Fiorentino", email="salvatore.fiorentino@unical.it" },
]

description = "At most one aware system"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/instafiore/amosum.git"

[project.scripts]
amomaximize = "amoclingo.__main__:optimized_run"
amomaximize-debug = "amoclingo.__main__:run"