[project]
name = "amosum"
version = "0.0.1"
authors = [
  { name="Salvatore Fiorentino", email="salvatore.fiorentino@unical.it" },
]

description = "At most one aware system"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amosum"]

[project.urls]
Homepage = "https://github.com/instafiore/amosum.git"

[project.scripts]
amoclingo = "amosum.amoclingo.__main__:optimized_run"
amoclingo-debug = "amosum.amoclingo.__main__:run"

amowasp = "amosum.amowasp.__main__:optimized_run"
amowasp-debug = "amosum.amowasp.__main__:run"